@@ -3682,6 +3682,8 @@ STR_6365    :Ride casualties
 STR_6366    :Stuck or stalled vehicles
 STR_6367    :{WINDOW_COLOUR_2}Animation frame:
 STR_6368    :For compatibility reasons, it is not recommended to run OpenRCT2 with Wine. OpenRCT2 has native support for macOS, Linux, FreeBSD and OpenBSD.
+STR_6369    :Allow building track at invalid heights
+STR_6370    :{SMALLFONT}{BLACK}Allows placing track pieces at any height interval 
 
 #############
 # Scenarios #
