@@ -1,6 +1,7 @@
 0.2.6+ (in development)
 ------------------------------------------------------------------------
 - Feature: [#9029] Open doors with the tile inspector.
+- Feature: [#10572] Cheat to allow building at invalid heights.
 - Feature: [#11231] Change shortcut window list order to be more intuitive, and split it into logical sections.
 - Feature: [#11306] Path additions are now kept when replacing the path.
 - Change: [#11209] Warn when user is running OpenRCT2 through Wine.
